# lc3-vm

./: Cargo.toml  README.md
src/: bus.rs  cpu.rs  display.rs  keyboard.rs  main.rs  memory.rs
src/instructions/: add.rs  and.rs  br.rs  jmp.rs  jsr.rs  ld.rs  ldi.rs  ldr.rs  lea.rs  mod.rs  not.rs  st.rs  sti.rs  str.rs  trap.rs
