[package]
name = "lc3-vm"
version = "0.1.0"
authors = ["AurelienAubry <aurelien.aubry.dev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2"
num-derive = "0.3"
anyhow = "1.0.37"
tui = "0.14.0"
termion = "1.5.5"
rand = "0.8.0"